
[package]
name = "ron-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
libfuzzer-sys = "0.4"
ron = { path = "..", features = ["integer128"] }
serde = { version = "1.0", features = ["derive"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "from_str"
path = "fuzz_targets/from_str.rs"
test = false
doc = false

[[bin]]
name = "arbitrary"
path = "fuzz_targets/arbitrary.rs"
test = false
doc = false
