
[package]
name = "ron-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.0", default-features = false, features = ["derive"] }
libfuzzer-sys = { version = "0.4", default-features = false, features = ["link_libfuzzer"] }
ron = { path = "..", default-features = false, features = ["integer128"] }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
erased-serde = { version = "0.4", default-features = false, features = ["std"] }
anyhow = { version = "1.0", default-features = false, features = ["std"] }
criterion = { version = "0.5", default-features = false }
serde_path_to_error = { version = "0.1", default-features = false }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "from_str"
path = "fuzz_targets/from_str.rs"
test = false
doc = false

[[bin]]
name = "arbitrary"
path = "fuzz_targets/arbitrary.rs"
test = false
doc = false

[[bench]]
name = "bench"
path = "fuzz_targets/bench/main.rs"
harness = false
